<resources>
    <!--  General  -->
    <string name="app_name" translatable="false">Turistický závod</string>

    <!--  activity_main  -->
    <string name="text_view_no_data">Zatím žádná data</string>
    <string name="text_view_station">Stanoviště:</string>
    <string name="text_view_referee">Rozhodčí:</string>
    <string name="fab">Nový záznam</string>
    <string name="fab_content_description">Přidat nový záznam</string>
    <string name="fab_start">Start</string>
    <string name="fab_start_content_description">Záznam vyběhnutí běžce</string>
    <string name="fab_finish">Finiš</string>
    <string name="fab_finish_content_description">Záznam přiběhnutí běžce do cíle</string>
    <string name="text_view_disqualified">Diskvalifikován/a</string>
    <string name="text_view_runner_info">Informace o běžci</string>

    <!--  menu_main  -->
    <string name="menu_item_send_data_to_pc">Poslat data do PC</string>
    <string name="menu_item_delete_all_data">Vymazat seznam běžců</string>
    <string name="menu_item_reset">Resetovat</string>

    <!--  menu_list_item  -->
    <string name="menu_item_edit_item">Upravit</string>
    <string name="menu_item_delete_item">Smazat</string>

    <!--  dialog_add  -->
    <string name="text_view_nfc_off">NFC je vypnuté </string>
    <string name="button_turn_on_nfc">Zapnout NFC</string>
    <string name="text_view_attach_tag">Přiložte čip</string>
    <string name="text_view_dont_remove_tag">Neodebírejte čip</string>

    <!--  activity_add  -->
    <string name="edit_text_runner_id_hint">Startovní číslo</string>
    <string name="edit_text_runner_name_hint">Jméno</string>
    <string name="edit_text_runner_team_hint">Oddíl</string>
    <string name="text_view_penalty_minutes">Trestné minuty</string>
    <string name="text_view_penalty_minutes_colon" translatable="false">:</string>
    <string name="text_view_runner_delay">Zdržení:</string>
    <string name="button_save">Uložit</string>
    <string name="button_cancel">Zrušit</string>
    <string name="toolbar_subtitle_add_runners">Nový záznam</string>

    <!--  list_items  -->
    <string name="text_view_runner_id_placeholder" translatable="false">1</string>
    <string name="text_view_runner_name_placeholder">Jméno Příjmení</string>
    <string name="text_view_runner_team_placeholder">Oddíl</string>
    <string name="image_disqualified_content_description">Běžec diskvalifikován</string>

    <!--  list_item_detailed  -->
    <string name="text_view_start_time">Start:</string>
    <string name="text_view_start_time_placeholder" translatable="false">09:35:51</string>
    <string name="text_view_finish_time">Cíl:</string>
    <string name="text_view_finish_time_placeholder" translatable="false">10:12:34</string>
    <string name="text_view_time_waited">Zdržení:</string>
    <string name="text_view_time_waited_placeholder" translatable="false">05:15</string>
    <string name="text_view_penalty_minutes_list">Trestné minuty:</string>
    <string name="text_view_penalty_minutes_placeholder" translatable="false">10:00</string>

    <!--  activity_checkpoint  -->
    <string name="toolbar_subtitle_checkpoint">Nastavení stanoviště</string>
    <string name="text_view_initial_info">Úvodní informace</string>
    <string name="text_input_layout_hint_name">Vaše jméno *</string>
    <string name="text_input_layout_hint_checkpoint">Stanoviště *</string>
    <string name="button_save_checkpoint">Uložit</string>

    <!--  header_navigation_drawer  -->
    <string name="text_view_navigation_drawer_header">Menu</string>

    <!--  navigation_drawer  -->
    <string name="menu_item_view_header_title">ZOBRAZENÍ</string>
    <string name="menu_item_view_basic">Základní</string>
    <string name="menu_item_view_detailed">Detailní</string>
    <string name="menu_item_action_header_title">AKCE</string>
    <string name="menu_item_action_export_runners">Exportovat seznam běžců</string>
    <string name="menu_item_action_delete_runners">Vymazat seznam běžců</string>
    <string name="menu_item_action_reset">Resetovat</string>

    <!--  activity_wifi  -->
    <string name="toolbar_subtitle_wifi">Příjem dat z PC</string>

</resources>
