<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="?android:attr/selectableItemBackground"
    android:paddingHorizontal="5dp"
    android:paddingVertical="3dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Elevated"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                style="@style/Widget.Material3.CardView.Filled"
                app:cardBackgroundColor="@color/card_view_runnerId"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_runnerId_rv"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="1dp"
                        android:textColor="?android:attr/colorEdgeEffect"
                        android:textSize="20sp"
                        android:text="@string/text_view_runner_id_placeholder" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="3dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView_runnerName_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="1dp"
                    android:layout_marginStart="5dp"
                    android:textColor="?android:attr/colorEdgeEffect"
                    android:text="@string/text_view_runner_name_placeholder" />

                <TextView
                    android:id="@+id/textView_runnerTeam_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="7dp"
                    android:textColor="@color/runnerInfo"
                    android:textSize="12sp"
                    android:text="@string/text_view_runner_team_placeholder" />

                <LinearLayout
                    android:id="@+id/linearLayout_detailedListContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:visibility="visible">

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/divider_horizontal_rv"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="20dp"
                        app:dividerColor="@color/divider" />

                    <LinearLayout
                        android:id="@+id/linearLayout_timeContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView_startTime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="1dp"
                                    android:text="@string/text_view_start_time"
                                    android:textColor="@color/runnerInfo"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/textView_finishTime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="1dp"
                                    android:text="@string/text_view_finish_time"
                                    android:textColor="@color/runnerInfo"
                                    android:textSize="12sp" />

                            </LinearLayout>

                            <com.google.android.material.divider.MaterialDivider
                                android:id="@+id/divider_startFinishSpace"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:visibility="gone" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView_startTime_var"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="1dp"
                                    android:text="@string/text_view_start_time_placeholder"
                                    android:textColor="@color/runnerInfo"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/textView_finishTime_var"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="1dp"
                                    android:text="@string/text_view_finish_time_placeholder"
                                    android:textColor="@color/runnerInfo"
                                    android:textSize="12sp" />

                            </LinearLayout>

                        </LinearLayout>

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="20dp"
                            android:layout_height="3dp"
                            android:visibility="invisible" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView_timeWaited"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="1dp"
                                    android:text="@string/text_view_time_waited"
                                    android:textColor="@color/runnerInfo"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/textView_penaltyMinutes_listDetailed"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_view_penalty_minutes_list"
                                    android:textColor="@color/runnerInfo"
                                    android:textSize="12sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView_timeWaited_var"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="1dp"
                                    android:text="@string/text_view_time_waited_placeholder"
                                    android:textColor="@color/runnerInfo"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/textView_penaltyMinutes_var_listDetailed"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_view_penalty_minutes_placeholder"
                                    android:textColor="@color/runnerInfo"
                                    android:textSize="12sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_disqualified_listDetailed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/image_disqualified_content_description"
                android:visibility="gone"
                app:srcCompat="@drawable/disabled_fill"
                app:tint="#F45E56" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>
