<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_checkpoint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckpointActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_checkpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_checkpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleCentered="true"
            app:subtitleCentered="true"
            app:subtitle="@string/toolbar_subtitle_checkpoint" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_checkpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_gravity="top|center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="25dp"
                android:text="@string/text_view_initial_info"
                android:textSize="15sp"
                android:textColor="?attr/colorPrimaryDark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_refereeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_refereeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_input_layout_hint_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_checkpoints"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_layout_hint_checkpoint"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_menuCheckpoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:popupElevation="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button_save_checkpoint"
        android:layout_width="220dp"
        android:layout_height="65dp"
        style="?android:attr/button"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:text="@string/button_save_checkpoint" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
